--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
    </div>
    <div class="col-md-6 margin-none">
    <h2><span class="glyphicon glyphicon-user"></span> About me</h2>
-   <p>I am an aspiring innovator passionate about improving human interaction with technology. I strive to make all my designs and code simple and clean in appearance, yet sophisticated enough to be sustainble and reusable. That said, the <a href="http://www.teslamotors.com/" target="_blank">Tesla Motors</a> series of electric vehicles are a manifestation of everything I believe in: <strong>innovation</strong>, <strong>sustainability</strong>, <strong>practicality</strong>, <strong>sleek</strong> and <strong>clean</strong> design, and just pure <strong>awesomeness</strong>.</p> 
+   <p>I am an aspiring innovator passionate about improving human interaction with technology. I strive to make all my designs and code simple and clean in appearance, yet sophisticated enough to be sustainable and reusable. That said, the <a href="http://www.teslamotors.com/" target="_blank">Tesla Motors</a> series of electric vehicles are a manifestation of everything I believe in: <strong>innovation</strong>, <strong>sustainability</strong>, <strong>practicality</strong>, <strong>sleek</strong> and <strong>clean</strong> design, and just pure <strong>awesomeness</strong>.</p> 
   <p>Currently pursuing a degree in <strong>Systems Design Engineering</strong> at the <a href="https://uwaterloo.ca/" target="_blank">University of Waterloo</a> and having worked in the online division at Canada's largest book retailer (<a href="http://www.chapters.indigo.ca/home/" target="_blank">Indigo Books and Music Inc.</a>), I am equipped with tools to solve complex problems with a big-picture perspective.</p>
    </div>
    </div>
