--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <![endif]-->
   </head>
   <body>
+  <!-- start of main screen -->
    <div class="container center vpadding fullheight margin-none">
    <div class="hero-unit vpadding2">
    <h1 class="fadein"><a class="scroll" href="#destination1">Ziying Zhang</a></h1>
@@ -36,12 +37,14 @@
    </div>
    <a class="scroll" href="#destination1"><button type="button" id="btn-anim" class="btn btn-primary btn-lg vpadding">Find out more <span class="glyphicon glyphicon-collapse-down"></span></button></a>
    </div>
+   <!-- End of main screen -->
+   <!-- Start of intro section-->
    <div class="jumbotron margin-none margin-none">
    <div class="container" id="destination1">
    <h2>Hi I'm Zi, nice to meet you</h2>
    <div class="row">
    <div class="col-md-6">
-   <img src="img/oldheadshot.png" class="img-responsive img-rounded" alt="Ziying Zhang">
+   <img src="img/IMG_9997.jpg" class="img-responsive img-rounded" alt="Ziying Zhang">
    </div>
    <div class="col-md-6 margin-none">
    <h2><span class="glyphicon glyphicon-user"></span> About me</h2>
@@ -51,6 +54,8 @@
    </div>
    </div>
    </div>
+   <!-- End of intro section -->
+   <!-- Start of footer -->
    <div id="footer" class="container-fluid">
    <h2><span class="glyphicon glyphicon-globe"></span> Connect with me </h2>
    <div class="row">
@@ -76,6 +81,7 @@
     <p style="padding-top:20px;"><strong>Disclaimer</strong>: I am not affiliated with Tesla Motors in any way. I just like their product.</p>
    <p><strong>Designed and developed by Ziying Zhang <span class="glyphicon glyphicon-ok-sign"></span></strong></p>
    </div>
+   <!-- End of footer -->
 	<!-- Thank you to Tink Tank for the social media icons -->
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
