--- a/index.html
+++ b/index.html
@@ -43,13 +43,15 @@
    <div class="container" id="destination1">
    <h2>Hi I'm Zi, nice to meet you</h2>
    <div class="row">
-   <div class="col-md-6">
+   <div class="col-md-6" style="padding-top:20px;">
    <img src="img/IMG_9997.jpg" class="img-responsive img-rounded" alt="Ziying Zhang">
    </div>
    <div class="col-md-6 margin-none">
    <h2><span class="glyphicon glyphicon-user"></span> About me</h2>
-   <p>I am an aspiring innovator passionate about improving human interaction with technology. I strive to make all my designs and code simple and clean in appearance, yet sophisticated enough to be sustainable and reusable. That said, the <a href="http://www.teslamotors.com/" target="_blank">Tesla Motors</a> series of electric vehicles are a manifestation of everything I believe in: <strong>innovation</strong>, <strong>sustainability</strong>, <strong>practicality</strong>, <strong>sleek</strong> and <strong>clean</strong> design, and just pure <strong>awesomeness</strong>.</p> 
+   <p>I'm an aspiring innovator passionate about improving human interaction with technology. I strive to make all my designs and code simple and clean in appearance, yet sophisticated enough to be sustainable and reusable.</p> 
+   <p>That said, the <a href="http://www.teslamotors.com/" target="_blank">Tesla Motors</a> series of electric vehicles are a manifestation of everything I believe in: <strong>innovation</strong>, <strong>sustainability</strong>, <strong>practicality</strong>, <strong>sleek</strong> and <strong>clean</strong> design, and just pure <strong>awesomeness</strong>.</p> 
   <p>Currently pursuing a degree in <strong>Systems Design Engineering</strong> at the <a href="https://uwaterloo.ca/" target="_blank">University of Waterloo</a> and having worked in the online division at Canada's largest book retailer (<a href="http://www.chapters.indigo.ca/home/" target="_blank">Indigo Books and Music Inc.</a>), I am equipped with tools to solve complex problems with a big-picture perspective.</p>
+  <a href="doc/resume.pdf" target="_blank"><button type="button" id="btn-anim" class="btn btn-primary btn-lg">Check out my resume <span class="glyphicon glyphicon-file"></span></button></a>
    </div>
    </div>
    </div>
