Improved anchor referencing

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <!-- start of main screen -->
    <div class="container center vpadding fullheight margin-none">
    <div class="hero-unit vpadding2">
-   <h1 class="fadein"><a class="scroll" href="#destination1">Ziying Zhang</a></h1>
+   <h1 class="fadein"><a href="#aboutme">Ziying Zhang</a></h1>
    </div>
    <div class="row">
    <div class="col-md-4 vpadding">
@@ -35,12 +35,12 @@
    <h3 class="fadein"><strong>Dream&nbsp;Chaser</strong> full-time</h3>
    </div>
    </div>
-   <a class="scroll" href="#destination1"><button type="button" id="btn-anim" class="btn btn-primary btn-lg vpadding">Find out more <span class="glyphicon glyphicon-collapse-down"></span></button></a>
+   <a href="#aboutme"><button type="button" id="btn-anim" class="btn btn-primary btn-lg vpadding">Find out more <span class="glyphicon glyphicon-collapse-down"></span></button></a>
    </div>
    <!-- End of main screen -->
    <!-- Start of intro section-->
    <div class="jumbotron margin-none margin-none">
-   <div class="container" id="destination1">
+   <div class="container" id="aboutme">
    <h2>Hi I'm Zi, nice to meet you</h2>
    <div class="row">
    <div class="col-md-6" style="padding-top:20px;">
