Website mass update
New features: loading spinner
Updated content
Updated resume

--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Ziying</title>
+    <title>Ziying Zhang: Design and Build</title>
 
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/main.css" rel="stylesheet">
-    <link href='http://fonts.googleapis.com/css?family=Ubuntu:300,400,500,700,300italic,400italic,500italic,700italic' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Ubuntu:300,400,500,700|Courgette' rel='stylesheet' type='text/css'>
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -20,41 +20,43 @@
   </head>
   <body>
   <!-- start of main screen -->
+  <div id="loading-spinner">
+    <img src="img/loader.gif" id="loading-spinner-image" class="img-responsive">
+  </div>
    <div class="container center vpadding fullheight margin-none">
-   <div class="hero-unit vpadding2">
-   <h1 class="fadein"><a href="#aboutme">Ziying Zhang</a></h1>
-   </div>
-   <div class="row">
-   <div class="col-md-4 vpadding">
-   <h3 class="fadein"><strong>Engineering&nbsp;Student</strong> part-time</h3>
-   </div>
-   <div class="col-md-4 vpadding">
-   <h3 class="fadein"><strong>Developer</strong> part-time</h3> 
-   </div>
-   <div class="col-md-4 vpadding">
-   <h3 class="fadein"><strong>Dream&nbsp;Chaser</strong> full-time</h3>
-   </div>
-   </div>
-   <a href="#aboutme"><button type="button" id="btn-anim" class="btn btn-primary btn-lg vpadding">Find out more <span class="glyphicon glyphicon-collapse-down"></span></button></a>
+     <div class="hero-unit vpadding2">
+     <h1 class="fadein fancy-font"><a href="#aboutme">Ziying Zhang</a></h1>
+     </div>
+     <div class="row">
+     <div class="col-md-4 vpadding">
+     <h3 class="fadein"><strong>Engineering&nbsp;Student</strong> part-time</h3>
+     </div>
+     <div class="col-md-4 vpadding">
+     <h3 class="fadein"><strong>Developer</strong> part-time</h3> 
+     </div>
+     <div class="col-md-4 vpadding">
+     <h3 class="fadein"><strong>Dream&nbsp;Chaser</strong> full-time</h3>
+     </div>
+     </div>
+     <a href="#aboutme"><button type="button" id="btn-anim" class="btn btn-primary btn-lg vpadding">Find out more <span class="glyphicon glyphicon-collapse-down"></span></button></a>
    </div>
    <!-- End of main screen -->
    <!-- Start of intro section-->
    <div class="jumbotron margin-none margin-none">
-   <div class="container" id="aboutme">
-   <h2>Hi I'm Zi, nice to meet you</h2>
-   <div class="row">
-   <div class="col-md-6" style="padding-top:20px;">
-   <img src="img/IMG_9997.jpg" class="img-responsive img-rounded" alt="Ziying Zhang">
-   </div>
-   <div class="col-md-6 margin-none">
-   <h2><span class="glyphicon glyphicon-user"></span> About me</h2>
-   <p>I'm an aspiring innovator passionate about improving human interaction with technology. I strive to make all my designs and code simple and clean in appearance, yet sophisticated enough to be sustainable and reusable.</p> 
-   <p>That said, the <a href="http://www.teslamotors.com/" target="_blank">Tesla Motors</a> series of electric vehicles are a manifestation of some of my core values: <strong>innovation</strong>, <strong>sustainability</strong>, <strong>practicality</strong>, <strong>sleek</strong> and <strong>clean</strong> design, and just pure <strong>awesomeness</strong>.</p> 
-  <p>Currently pursuing a degree in <strong>Systems Design Engineering</strong> at the <a href="https://uwaterloo.ca/" target="_blank">University of Waterloo</a> and having worked in the online division at Canada's largest book retailer (<a href="http://www.chapters.indigo.ca/home/" target="_blank">Indigo Books and Music Inc.</a>), I'm equipped with tools to solve complex problems with a big-picture perspective.</p>
-  <a href="doc/resume.pdf" target="_blank"><button type="button" id="btn-anim" class="btn btn-primary btn-lg">Check out my r&eacute;sum&eacute; <span class="glyphicon glyphicon-file"></span></button></a>
-   </div>
-   </div>
-   </div>
+     <div class="container" id="aboutme">
+     <h2>Hey there! I'm Zi, nice to meet you.</h2>
+     <div class="row">
+     <div class="col-md-6" style="padding-top:20px;">
+     <img src="img/IMG_9997.jpg" class="img-responsive img-rounded" alt="Ziying Zhang">
+     </div>
+     <div class="col-md-6 margin-none">
+     <h2><span class="glyphicon glyphicon-user"></span> About me</h2>
+     <p>I'm an aspiring innovator passionate about improving human interaction with technology. I love building usable products that have the potential to make people's everyday lives easier. At the <a href="https://uwaterloo.ca/" target="_blank">University of Waterloo</a>, I study how to do just that.</p> 
+    <p>I'm the Lead Front-End Developer at <a href="http://nspire.org" target="_blank">Nspire</a>, where I'm building the website and platform to connect, empower, and inspire Canada's business and technology leaders. I've interned at industry leaders like <a href="http://www.genesys.com/" target="_blank">Genesys</a> and <a href="http://www.chapters.indigo.ca/home/" target="_blank">Indigo</a>, where I've learned how to make valuable contributions in software development and marketing.</p> <p>I'm ready to tackle the next big challenge.</p>
+    <a href="doc/resume.pdf" target="_blank"><button type="button" id="btn-anim" class="btn btn-primary btn-lg">Check out my r&eacute;sum&eacute; <span class="glyphicon glyphicon-file"></span></button></a>
+     </div>
+     </div>
+     </div>
    </div>
    <!-- End of intro section -->
    <!-- Start of footer -->
@@ -80,7 +82,7 @@
         <a href="http://instagram.com/amaziying" target="_blank"><img src="img/instagram.png" class="img-responsive" alt="instagram">
         </a></div>
    </div>
-    <p style="padding-top:20px;"><strong>Disclaimer</strong>: I am not affiliated with Tesla Motors in any way. I just like their product.</p>
+    <p style="padding-top:20px;">New website in development. Stay tuned!</p>
    <p><strong>Designed and developed by Ziying Zhang <span class="glyphicon glyphicon-ok-sign"></span></strong></p>
    </div>
    <!-- End of footer -->
