--- a/index.html
+++ b/index.html
@@ -51,9 +51,9 @@
      </div>
      <div class="col-md-6 margin-none">
      <h2><span class="glyphicon glyphicon-user"></span> About me</h2>
-     <p>I'm an aspiring innovator passionate about improving human interaction with technology. I love building usable products that have the potential to make people's everyday lives easier. At the <a href="https://uwaterloo.ca/" target="_blank">University of Waterloo</a>, I study how to do just that.</p> 
-    <p>I'm the Lead Front-End Developer at <a href="http://nspire.org" target="_blank">Nspire</a>, where I'm building the website and platform to connect, empower, and inspire Canada's business and technology leaders. I've interned at industry leaders like <a href="http://www.genesys.com/" target="_blank">Genesys</a> and <a href="http://www.chapters.indigo.ca/home/" target="_blank">Indigo</a>, where I've learned how to make valuable contributions in software development and marketing.</p> <p>I'm ready to tackle the next big challenge.</p>
-    <a href="doc/resume.pdf" target="_blank"><button type="button" id="btn-anim" class="btn btn-primary btn-lg">Check out my r&eacute;sum&eacute; <span class="glyphicon glyphicon-file"></span></button></a>
+     <p>I'm an aspiring innovator passionate about improving human interaction with technology. Naturally, I love building usable products that have the potential to make people's lives easier. At the <a href="https://uwaterloo.ca/" target="_blank">University of Waterloo</a>, I study how to do just that.</p> 
+    <p>Outside the classroom, I'm the Lead Front-End Developer at <a href="http://nspire.org" target="_blank">Nspire</a>, where I'm building the website and platform to connect, empower, and inspire Canada's business and technology leaders. I've interned with industry leaders like <a href="http://www.genesys.com/" target="_blank">Genesys</a> and <a href="http://www.chapters.indigo.ca/home/" target="_blank">Indigo</a>, where I've learned how to make valuable contributions in software development and internet marketing.</p> <p>I'm ready to tackle the next big challenge.</p>
+    <a href="doc/ZiyingCV.pdf" target="_blank"><button type="button" id="btn-anim" class="btn btn-primary btn-lg">Check out my r&eacute;sum&eacute; <span class="glyphicon glyphicon-file"></span></button></a>
      </div>
      </div>
      </div>
@@ -64,7 +64,7 @@
    <h2><span class="glyphicon glyphicon-globe"></span> Connect with me </h2>
    <div class="row">
    <div class="col-xs-2 center">
-   <a href="mailto:zy8zhang@uwaterloo.ca"><img src="img/email.png" class="img-responsive" alt="email"></a>
+   <a href="mailto:zy8zhang@uwaterloo.ca?subject=Let's chat"><img src="img/email.png" class="img-responsive" alt="email"></a>
    </div>
     <div class="col-xs-2 center">
 <a href="http://www.linkedin.com/in/amaziying" target="_blank"><img src="img/linkedin.png" class="img-responsive" alt="linkedin"></a>
@@ -82,7 +82,7 @@
         <a href="http://instagram.com/amaziying" target="_blank"><img src="img/instagram.png" class="img-responsive" alt="instagram">
         </a></div>
    </div>
-    <p style="padding-top:20px;">New website in development. Stay tuned!</p>
+    <p style="padding-top:20px;">New website + portfolio in development. Stay tuned!</p>
    <p><strong>Designed and developed by Ziying Zhang <span class="glyphicon glyphicon-ok-sign"></span></strong></p>
    </div>
    <!-- End of footer -->
