minor text + css update

--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
      </div>
      <div class="col-md-6 margin-none">
      <h2><span class="glyphicon glyphicon-user"></span> About me</h2>
-     <p>I'm an aspiring innovator passionate about improving human interaction with technology. Naturally, I love building usable products that have the potential to make people's lives easier. At the <a href="https://uwaterloo.ca/" target="_blank">University of Waterloo</a>, I study how to do just that.</p> 
-    <p>Outside the classroom, I'm the Lead Front-End Developer at <a href="http://nspire.org" target="_blank">Nspire</a>, where I'm building the website and platform to connect, empower, and inspire Canada's business and technology leaders. I've interned with industry leaders like <a href="http://www.genesys.com/" target="_blank">Genesys</a> and <a href="http://www.chapters.indigo.ca/home/" target="_blank">Indigo</a>, where I've learned how to make valuable contributions in software development and internet marketing.</p> <p>I'm ready to tackle the next big challenge.</p>
+     <p>I'm an aspiring innovator passionate about improving human interaction with technology. Naturally, I love building usable products that have the potential to make people's lives easier. At the <a href="https://uwaterloo.ca/systems-design-engineering/" target="_blank">University of Waterloo</a>, I'm studying how to do just that.</p> 
+    <p>Outside the classroom, I'm the Lead Front-End Developer at <a href="http://nspire.org" target="_blank">Nspire</a>, where we're building the website and platform to connect, empower, and inspire Canada's business and technology leaders. I've interned with industry leaders like <a href="http://www.genesys.com/" target="_blank">Genesys</a> and <a href="http://www.chapters.indigo.ca/home/" target="_blank">Indigo</a>, where I've learned how to make valuable contributions in software development and internet marketing.</p> <p>I'm ready to tackle the next big challenge.</p>
     <a href="doc/ZiyingCV.pdf" target="_blank"><button type="button" id="btn-anim" class="btn btn-primary btn-lg">Check out my r&eacute;sum&eacute; <span class="glyphicon glyphicon-file"></span></button></a>
      </div>
      </div>
